--- a/index.html
+++ b/index.html
@@ -4,12 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutoriel Git pour débutant</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <script src="script.js"></script>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>
+        <img src="" alt="">
+    </header>
+    <section id="home" class="hero">
+        <div class="container">
+            <h1>Welcome to Git Basics</h1>
+            <p>Learn the fundamentals of Git and version control in an easy-to-follow manner.</p>
+            <a href="#about" class="btn">Start Learning</a>
+        </div>
+    </section>
+
+    <section id="about" class="content">
+        <div class="container">
+            <h2>What is Git?</h2>
+            <p>Git is a distributed version control system created by Linus Torvalds in 2005. It is used to track changes in source code during software development.</p>
+            <h3>Why Learn Git?</h3>
+            <ul>
+                <li>Version Control</li>
+                <li>Collaboration</li>
+                <li>Backup</li>
+                <li>Branching and Merging</li>
+            </ul>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 GitTutorial. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
+
+
+
+mxr.codes@Mamours-MacBookAir learn-git % git checkout -b new-feature
