--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </p>
             <p>J’espère que cette introduction t’a donné envie d’en découvrir davantage. Pour vraiment maîtriser cet outil incroyable, il faudra pratiquer et plonger dans <a href="https://git-scm.com/docs/git#_git_commands">la documentation.</a></p>
             <br>
-            <p>Tu peux aussi télécharger <a href="assets/git-recap.pdf" target="_blank">ce pdf</a> gratuitement pour avoir un résumé des commandes de bases à connaître.</p>
+            <p>Tu peux aussi télécharger <a href="assets/git-recap.pdf" target="_blank" class="pdf">ce pdf</a> gratuitement pour avoir un résumé des commandes de bases à connaître.</p>
         </div>
         <footer>
             <img src="assets/linus.jpg" alt="" class="code">
