added a section for contributors's messages

--- a/index.html
+++ b/index.html
@@ -339,6 +339,20 @@
                 <a href="assets/file/git-recap.pdf" target="_blank" class="download-button">Télécharger le PDF</a>
             </div>
         </section>
+
+        <h3 class="message-title" id="message-title">Messages des contibuteurs <span id="arrow" class="arrow">></span></h3>
+        <section id="message" class="card message">
+            <ul class="message-list">
+                <li>
+                    <span><strong>El Hadji Ibrahima Cissé</strong> : "The absurd is born of this confrontation between the human need and the unreasonable silence of the world."</span>
+                </li>
+                <!-- Comment laisser un message : 
+                    <li>
+                        <span><strong>Votre nom</strong> : "Votre message"</span>
+                    </li>
+                -->
+            </ul>
+        </section>
     </main>
 
     <footer class="footer">
@@ -357,6 +371,7 @@
         </div>
     </footer>
     <script src="js/themeScript.js" defer></script>
+    <script src="js/message.js" defer></script>
 </body>
 
 </html>
