removed instagram link for github

--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@
                 <a href="https://youtube.com/@mxr_codes" target="_blank" class="social-link">
                     <img src="assets/img/youtube.png" alt="YouTube MXR CODES">
                 </a>
-                <a href="https://instagram.com/mxr.codes" target="_blank" class="social-link">
-                    <img src="assets/img/instagram.png" alt="Instagram mxr.codes">
+                <a href="https://github.com/mamour-dx" target="_blank" class="social-link">
+                    <img src="assets/img/github-icon.png" alt="Instagram mxr.codes">
                 </a>
             </div>
             <p class="footer-text">💡 Fun fact: La construction de ce site web même est traqué ici, et tu peux y
