feat: ajout de la configuration utilisateur pour Git (nom et email)

--- a/index.html
+++ b/index.html
@@ -138,7 +138,12 @@
                 <span class="orange">Comment</span> ça marche ?
             </h1>
             <p>
-                D'abord, il faut installer Git sur ta machine. Ensuite, tu vas pouvoir initialiser un dépôt Git dans ton
+                D'abord, il faut installer Git sur ta machine.Ensuite tu vas  commencer par configurer ton nom et ton adresse e-mail.
+                Ces informations sont essentielles, car Git les utilise pour toutes les validations, et elles seront indélébiles dans l'historique de vos commits:
+            </p>
+            <img src="assets/img/code6.png" alt="git init" class="code">
+            <p>
+                Ensuite, tu vas pouvoir initialiser un dépôt Git dans ton
                 projet. C’est ce qu’on appelle un <span class="orange">« repository »</span>. C’est là que Git va
                 stocker toutes les versions de ton projet.
                 <br><br>
