--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                     <img src="assets/img/github-icon.png" alt="Instagram mxr.codes">
                 </a>
             </div>
-            <p class="footer-text">💡 Fun fact: La construction de ce site web même est traqué ici, et tu peux y
+            <p class="footer-text">💡 Fun fact: La construction de ce site web même est traqué avec git, et tu peux y
                 contribuer sur <a href="https://github.com/mamour-dx/learn-git" target="_blank">GitHub</a></p>
         </div>
     </footer>
